ss.padding alignment is done for select fix managefilter flyout (#566)
* padding alignment is done for select bix managefilter flyout

* small update

* Minor style fixes

--- a/src/components/flyout/manageFilterFlyout.scss
+++ b/src/components/flyout/manageFilterFlyout.scss
@@ -26,7 +26,7 @@
 
       .edit-icon { padding-right: 4px; }
 
-      .delete-icon {padding-left: 4px; }
+      .delete-icon { padding-left: 4px; }
     }
   }
 }
@@ -61,7 +61,10 @@ input { background-color: #1b1d1f; }
   border: none;
   background-color: #1b1d1f;
   display: inline-block;
+  margin-top: 8px;
 }
+
+.Select-input { height : 25px !important; }
 
 .conditions-wrapper { display: inline-block; }
 
@@ -134,6 +137,8 @@ input { background-color: #1b1d1f; }
   height: 12px;
 }
 
+.add-icon { margin-right: 5px; }
+
 .error-msg { color: red; }
 
 .style-manage {
@@ -155,9 +160,24 @@ input { background-color: #1b1d1f; }
     height: 10px;
   }
 
+  .Select-placeholder, .Select--single > .Select-control .Select-value { padding: 6px 0px 0px 10px; }
+
+  .Select-input {
+    padding-left: 3px;
+    padding-right: 10px;
+  }
+
   .Select { width: 280px !important; }
 
-  .Select-placeholder { color: #454a4e; }
+  .Select-placeholder {
+    color: #454a4e;
+    margin-top: 6px;
+   }
+
+  .Select-arrow-zone {
+    top: 0px;
+    vertical-align: center;
+   }
 
   .Select-menu-outer {
     border: 1px solid #afb9c3 !important;
@@ -186,6 +206,7 @@ input { background-color: #1b1d1f; }
 .Remove-icon {
   height: 2px;
   width: 12px;
+  margin-right: 5px;
 }
 
 .cancel-icon { height: 12px; }
